# BTS_Flight_Forecast

./: BTS_Demo_1_Data_Combination.ipynb  BTS_Demo_2_Delay_Prediction_Cleaning_And_Modelling.ipynb  BTS_Demo_3_Delay_Severity_Prediction_Cleaning_And_Modelling.ipynb  BTS_Demo_Data_Cleaning_And_Modelling.ipynb  BTS_Demo_Data_Combination.ipynb  LICENSE  PyQT6_Demo.ipynb  PyQt5_GUI_Demo.ui  README.md  delay_modelling_2.py  environment.yml  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml
BTS_Flight_Forecast/resources/: README.md  flight_delay_multi_page.ui
BTS_Flight_Forecast/scripts/: reset_and_setup.py
BTS_Flight_Forecast/tests/: test_data_processing.py  test_user_interface.py
BTS_Flight_Forecast/utils/: ModellingTestingNotebook.ipynb  data_processing.py  delay_predictor.py  ui_manager.py  weather.py
POC/: BTS_Demo_1_Data_Combination.ipynb  BTS_Demo_2_Delay_Prediction_Cleaning_And_Modelling.ipynb  BTS_Demo_3_Delay_Severity_Prediction_Cleaning_And_Modelling.ipynb  PyQT5_Demo.py
docs/: Background.md  Component.md  Component_specification.md  Functional_specification.md  Milestone.md  Pseudocode.md  TechnologyReview.pptx  UseCases.md  UserStories.md  component_specific.md  functional_specification.md
examples/POC/: PyQT5_Demo.py  PyQt5_GUI_Demo.ui
flight_forecast/: .coveragerc  classifier.pkl  classifier_metrics.pkl  encoder.pkl  regressor.pkl  regressor_metrics.pkl
flight_forecast/resources/: README.md  (+2 more)
resources/: airport_codes.csv  airport_codes_full.csv  flight_delay_multi_page.ui  month_days.csv
weather/: weather.py
(+38 files in other folders)
